--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="icon" href="assets/images/1.png" />
+
     <title>Chat</title>
   </head>
   <body>
