--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="icon" href="assets/images/1.png" />
 
     <title>login</title>
   </head>
@@ -129,20 +130,28 @@
                     />
                   </div>
                 </div>
-                <div class="d-flex pt-2">
-                  <div class="">
-                    <input
-                      type="checkbox"
-                      style="height: revert"
-                      class="checkbox"
-                      name=""
-                      id=""
-                    />
+                <div class="forgot-password-flex">
+                  <div class="d-flex pt-2">
+                    <div class="">
+                      <input
+                        type="checkbox"
+                        style="height: revert"
+                        class="checkbox"
+                        name=""
+                        id=""
+                      />
+                    </div>
+                    <div class="pl-2">
+                      <p>Keep Me Signed In</p>
+                    </div>
                   </div>
-                  <div class="">
-                    <p>Keep Me Signed In</p>
+                  <div class="pt-2">
+                    <a class="forgot-link" href="forgetpassword.html"
+                      >Forgot Password</a
+                    >
                   </div>
                 </div>
+
                 <div class="row">
                   <div class="col-lg-12">
                     <button class="form-btn">LOGIN</button>
