--- a/signup.html
+++ b/signup.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="icon" href="assets/images/1.png" />
 
     <title>register</title>
   </head>
@@ -110,7 +111,7 @@
               <form class="form-group">
                 <div class="row">
                   <div class="col-lg-12">
-                    <label for="username">UserName:</label>
+                    <label for="username" class="mt-4">UserName:</label>
                     <input
                       type="text"
                       class="form-control"
@@ -143,7 +144,10 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-lg-4 col-sm-12 col-xs-12">
+                  <div class="col-lg-12">
+                    <input class="form-control" type="date" />
+                  </div>
+                  <!-- <div class="col-lg-4 col-sm-12 col-xs-12">
                     <select class="form-control">
                       <option>01</option>
                       <option>02</option>
@@ -173,7 +177,7 @@
                       <option>1996</option>
                       <option>1997</option>
                     </select>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="row">
                   <div class="col-lg-12">
