--- a/chat-messages.html
+++ b/chat-messages.html
@@ -22,12 +22,17 @@
         <div class="chat-flex">
           <div class="chat-left-side">
             <div class="chat-head">
-              <div>
-                <img src="assets/images/1.png" class="img-fluid" alt="" />
+              <div class="logo">
+                <img
+                  id="logo"
+                  src="assets/images/1.png"
+                  class="img-fluid"
+                  alt=""
+                />
               </div>
               <div class="chat-head-icons">
-                <div><img src="assets/svgs/add.svg" alt="" /></div>
-                <div class="search-bar">
+                <div class=""><img src="assets/svgs/add.svg" alt="" /></div>
+                <div class="d-flex">
                   <img
                     class="search-icon"
                     src="assets/svgs/Icons-search-gray.svg"
